--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -37,12 +37,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#productTwo" role="button" aria-expanded="false"
 									aria-controls="productTwo"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -65,12 +65,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#productThree" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -93,12 +93,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#productFour" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -121,12 +121,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#productFive" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -149,12 +149,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#productSix" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -177,12 +177,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#productSeven" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -205,12 +205,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#productEight" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -491,12 +491,12 @@
 
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" data-target="" href="#product-One" role="button"
 									aria-expanded="false" aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -519,12 +519,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#product-Two" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -547,12 +547,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#product-Three" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -575,12 +575,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#product-Four" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -603,12 +603,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#product-Five" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -802,12 +802,12 @@
 
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" data-target="" href="#product--One" role="button"
 									aria-expanded="false" aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -830,12 +830,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#product--Two" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -858,12 +858,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#product--Three" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -886,12 +886,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#product--Four" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
@@ -914,12 +914,12 @@
 					</div>
 					<div class="swiper-slide">
 						<div class="col-lg-12 mw-100 text-left px-1 px-sm-1 px-md-2 px-lg-2">
-							<div class="card" data-cardSelected>
+							<div class="card">
 								<img src="{{root}}assets/img/product-img.jpg"
-									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="..." data-cardSelect>
+									class="card-img-top pt-lg-3 pt-md-2 px-lg-3 px-md-2 pt-2 px-2 pb-1" alt="...">
 								<a class="btn-floating" data-toggle="collapse" href="#product--Five" role="button" aria-expanded="false"
 									aria-controls="productOne"></a>
-								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4" data-cardSelect>
+								<div class="card-body pb-0 pb-sm-2 pb-md-2 pb-lg-2 px-2 px-md-4 px-lg-4">
 									<p class="mb-0 mb-sm-2">Title</p>
 									<p class="card-text d-none d-md-block">Some quick example text to build on the card title and make up
 										the bulk
